--- a/TestFirebase/Content/Site.css
+++ b/TestFirebase/Content/Site.css
@@ -26,6 +26,7 @@ ul, li, a {
 .bottom-border {
     width: 100%;
     height: 1px;
+    background-color: #333;
 }
 
 main, #messages-card {
@@ -162,6 +163,18 @@ main, #messages-card {
     justify-content: space-between;
 }
 
+#copy-link {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    top: 62px;
+    width: 100%;
+    right: 0;
+    padding-left: 10px;
+    justify-content: flex-end;
+    padding-right: 10px;
+}
+
 #user-container {
     position: absolute;
     display: flex;
@@ -174,24 +187,24 @@ main, #messages-card {
     padding-right: 10px;
 }
 
-    #user-container #user-pic {
-        top: -3px;
-        position: relative;
-        display: inline-block;
-        background-image: url('/images/profile_placeholder.png');
-        background-repeat: no-repeat;
-        width: 40px;
-        height: 40px;
-        background-size: 40px;
-        border-radius: 20px;
-    }
+#user-container #user-pic {
+    top: -3px;
+    position: relative;
+    display: inline-block;
+    background-image: url('/images/profile_placeholder.png');
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
+    background-size: 40px;
+    border-radius: 20px;
+}
 
-    #user-container #user-name {
-        font-size: 16px;
-        line-height: 36px;
-        padding-right: 10px;
-        padding-left: 20px;
-    }
+#user-container #user-name {
+    font-size: 16px;
+    line-height: 36px;
+    padding-right: 10px;
+    padding-left: 20px;
+}
 
 #image-form #submitImage {
     width: auto;
@@ -225,12 +238,12 @@ main, #messages-card {
         padding-right: 2px;
     }
 
-        #user-container #user-pic {
-            top: 2px;
-            width: 33px;
-            height: 33px;
-            background-size: 33px;
-        }
+    #user-container #user-pic {
+        top: 2px;
+        width: 33px;
+        height: 33px;
+        background-size: 33px;
+    }
 }
 
 .mdl-textfield__label:after {
