--- a/TestFirebase/Views/Chat/RedirectToChannel.cshtml
+++ b/TestFirebase/Views/Chat/RedirectToChannel.cshtml
@@ -1,6 +1,6 @@
 ﻿<script>
     $(document).ready(function () {
-        var form = $('<form action="http://localhost:25357/chat" method="post"> <input type="text" name="channel" value="@Session["ID_Channel"]" /></form>');
+        var form = $('<form action="http://chatapp1.dangnh2002.com/chat" method="post"> <input type="text" name="channel" value="@Session["ID_Channel"]" /></form>');
         $('body').append(form);
         form.submit();
         return;
