--- a/TestFirebase/Views/Home/Index.cshtml
+++ b/TestFirebase/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
         <div class="modal-content">
             <div class="modal-body" style="text-align:center">
                 <input type="hidden" id="ID" />
-                <input type="password" class="form-control d-inline" placeholder="Nhập mật khẩu" id="Password" autofocus="autofocus" onkeydown="EnterPwd()" />
+                <input type="password" class="form-control_custom ssd-inline" placeholder="Nhập mật khẩu" id="Password" autofocus="autofocus" onkeydown="EnterPwd()" />
                 <button type="button" onclick="Submit()" class="btn btn-info d-inline">Xác nhận</button>
                 <br />
                 <span id="ErrorJoin" style="color:red;"></span>
